transcation APIs
